# eternity_vtol_firmware

eternity_fc/: CMakeLists.txt  package.xml  setup.py
eternity_fc/include/: attitude_controller.h  rigidBody.h  rigidbody_utils.h  servo_mixer.h  simulator.h  state_machine.h  state_machine_defines.h
eternity_fc/launch/: demo.launch  hover.launch  simulator.launch
eternity_fc/msg/: angular_velocity_sp.msg  attitude_sp.msg  hover_attitude_sp.msg
eternity_fc/params/: hover.yaml  simulator.yaml
eternity_fc/src/: attitude_controller.cpp  rigidBody.cpp  servo_mixer.cpp  simulator.cpp  state_machine.cpp  test.cpp  utils.cpp
sensor_djisdk_adapter/: CMakeLists.txt  log.txt  package.xml
sensor_djisdk_adapter/launch/: demo.launch  sensor_to_unreal.launch
sensor_djisdk_adapter/scripts/: sensor_to_unreal.py  unreal_sensor_adapter.py
sensor_djisdk_adpter/scripts/: unreal_sensor_adpter.py
